<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_quote_view"
        android:icon="@drawable/ic_quote_action_view"
        android:title="@string/quotes_action_view" />
    <item
        android:id="@+id/action_quote_edit"
        android:icon="@drawable/ic_quote_action_edit"
        android:title="@string/quotes_action_edit" />
    <item
        android:id="@+id/action_quote_revise"
        android:icon="@drawable/ic_quote_action_revise"
        android:title="@string/quotes_action_revise" />
    <item
        android:id="@+id/action_quote_duplicate"
        android:icon="@drawable/ic_quote_action_duplicate"
        android:title="@string/quotes_action_duplicate" />
    <item
        android:id="@+id/action_quote_submit_workflow"
        android:icon="@drawable/ic_quote_action_workflow"
        android:title="@string/quotes_action_submit_workflow" />
    <item
        android:id="@+id/action_quote_audit_logs"
        android:icon="@drawable/ic_document"
        android:title="@string/quotes_action_audit_logs" />
    <item
        android:id="@+id/action_quote_workflow_logs"
        android:icon="@drawable/ic_quote_action_workflow"
        android:title="@string/quotes_action_workflow_logs" />
    <item
        android:id="@+id/action_quote_view_workflow"
        android:icon="@drawable/ic_quote_action_workflow"
        android:title="@string/quotes_action_view_workflow" />
    <item
        android:id="@+id/action_quote_show_report"
        android:icon="@drawable/ic_quote_action_view"
        android:title="@string/quotes_action_show_report" />
    <item
        android:id="@+id/action_quote_cancel"
        android:icon="@drawable/ic_quote_action_cancel"
        android:title="@string/quotes_action_cancel" />
</menu>
