<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_purchase_order_view"
        android:icon="@drawable/ic_quote_action_view"
        android:title="@string/purchase_orders_action_view" />
    <item
        android:id="@+id/action_purchase_order_edit"
        android:icon="@drawable/ic_quote_action_edit"
        android:title="@string/purchase_orders_action_edit" />
    <item
        android:id="@+id/action_purchase_order_show_report"
        android:icon="@drawable/ic_quote_action_view"
        android:title="@string/purchase_orders_action_show_report" />
    <item
        android:id="@+id/action_purchase_order_submit_po"
        android:icon="@drawable/ic_quote_action_workflow"
        android:title="@string/purchase_orders_action_submit_po" />
    <item
        android:id="@+id/action_purchase_order_send_to_vendor"
        android:icon="@drawable/ic_truck"
        android:title="@string/purchase_orders_action_send_to_vendor" />
    <item
        android:id="@+id/action_purchase_order_history"
        android:icon="@drawable/ic_document"
        android:title="@string/purchase_orders_action_history" />
</menu>
