<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_sale_order_edit"
        android:icon="@drawable/ic_quote_action_edit"
        android:title="@string/sale_orders_action_edit" />
    <item
        android:id="@+id/action_sale_order_view"
        android:icon="@drawable/ic_quote_action_view"
        android:title="@string/sale_orders_action_view" />
    <item
        android:id="@+id/action_sale_order_show_report"
        android:icon="@drawable/ic_quote_action_view"
        android:title="@string/sale_orders_action_show_report" />
    <item
        android:id="@+id/action_sale_order_submit_workflow"
        android:icon="@drawable/ic_quote_action_workflow"
        android:title="@string/sale_orders_action_submit_workflow" />
</menu>
